[project]
name = "genesis-scope"
version = "0.1.0"
description = "Semantic coordination system for human-LLM collaboration (GenesisAeon Package 39)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon" }]
requires-python = ">=3.11"
keywords = ["genesisaeon", "crep", "utac", "collaboration", "semantic-anchors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
scope = "genesis_scope.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/genesis-scope"
Repository = "https://github.com/GenesisAeon/genesis-scope"
Documentation = "https://genesisaeon.github.io/genesis-scope"
Issues = "https://github.com/GenesisAeon/genesis-scope/issues"
Zenodo = "https://doi.org/10.5281/zenodo.17472834"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_scope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=genesis_scope --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "genesis_scope.cli"
disallow_untyped_decorators = false
